se acomodaron los iconos

--- a/index.html
+++ b/index.html
@@ -12,28 +12,33 @@
 </head>
 <body>
     <!--Barra-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mercado Daniel</a>
-          <a class="navbar-brand" href="#"><button class="boton-i btn"><img src="" alt=""></button></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"><i class="bi-linkedin"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="bi-github"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#"><button class="btn btn-succes active">login</button></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+            <div class="container-fluid">
+            <button  class="btn"><img src="/images/APLogo-20-20.png" width="100" alt=""></button> 
+            <a class="navbar-brand" href="#">
+                Mercado Daniel
+                </a>
+            <a class="navbar-brand" href="#"><button class="boton-i btn nav-item"><img src="" alt=""></button></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><i class="bi-linkedin"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#"><i class="bi-github"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#"><button class="btn btn-succes active">login</button></a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+      </header>
     <div class="container">
         <!--Perfil-->
         <div>
@@ -42,10 +47,11 @@
                     <img src="/images/codigo-programacion.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="card-body">
-                <div>
+                <div id="box-image-profile">
                     <img id="image-profile" src="/images/IMG_20220816_081428.jpg" alt="">
                 </div>
                 <h5 class="card-title">Mercado Daniel</h5>
+                <p class="card-text">Full Stack Developer Jr</p>
                 <p class="card-text">Rosario, Santafe, Argentina</p>
                 <div>
                     <button class="btn btn-success">Tengo Interes</button>
